# crabgrass-2

./: .gitignore  AI_README.md  main.py  pyproject.toml  scratch.md
backend/: .env.example  .gitignore  pyproject.toml
backend/crabgrass/: __main__.py  config.py  main.py  seed.py
backend/crabgrass/ai/: gemini.py  prompts.py
backend/crabgrass/api/: sse.py
backend/crabgrass/api/routes/: agent.py  auth.py  coherence.py  files.py  ideas.py  objectives.py
backend/crabgrass/concepts/: context_file.py  embedding.py  graph.py  idea.py  kernel_file.py  objective.py  objective_file.py  session.py  version.py
backend/crabgrass/concepts/agents/: __init__.py  approach_agent.py  challenge_agent.py  coherence_agent.py  context_agent.py  objective_agent.py  steps_agent.py  summary_agent.py
backend/crabgrass/db/: connection.py  migrations.py
backend/crabgrass/jj/: repository.py
backend/crabgrass/sync/: synchronizations.py
backend/tests/: conftest.py  test_agent_api.py  test_approach_agent.py  test_auth.py  test_coherence_agent.py  test_coherence_api.py  test_context_file.py  test_context_files_api.py  test_db_connection.py  test_embedding_concept.py  test_idea_concept.py  test_ideas_api.py  test_session.py  test_steps_agent.py  test_summary_agent.py  test_version_restore.py
context/: canvas-feature.md  coding-patterns.md  concepts-and-synchronizations.md  crabgrass-spec-v1.md  implementation-plan-v1.md  post_build_notes.md  slice-1-tasks.md  slice-10-tasks.md  slice-11-tasks.md  slice-12-tasks.md  slice-2-tasks.md  slice-3-tasks.md  slice-4-tasks.md  slice-5-tasks.md  (+7 more)
(+21 files in other folders)
